--- a/about.textile
+++ b/about.textile
@@ -3,15 +3,13 @@ layout: default
 title: About
 ---
 
-<div class="content_box span-24">
+<div id="about" class="content_box span-24">
   <div class="content_wrapper">
     <h2>About</h2>
-
     <p>
       <b>railway</b> is a web development company currently based in Berlin, Germany.
       We offer all kinds of services including:
     </p>
-
     <ul class="bullets">
       <li>web development (mostly with Ruby on Rails)</li>
       <li>web design</li>
@@ -22,18 +20,18 @@ title: About
       <li>training</li>
       <li>and more...</li>
     </ul>
-
-    <p>Contact us at <a href="mailto:office@railway.at">office@railway.at</a>.</p>
-
+    <p>
+      Contact us at <a href="mailto:office@railway.at">office@railway.at</a>.
+    </p>
     <h3>Who is behind railway?</h3>
-
+    <img src="http://gravatar.com/avatar/5976001c9ebf095c4988855a4e102de5?s=200" alt="Clemens Kofler" style="float:left; margin:0 10px 20px 0;" />
     <h4>Clemens Kofler</h4>
-
-    <img align="left" src="http://gravatar.com/avatar/5976001c9ebf095c4988855a4e102de5?s=200" alt="Clemens Kofler" style="margin-right:10px; margin-bottom:10px;" />
-
-    <p>Clemens has been developing web applications since 2001, switching to Rails some time in 2006 (after working some more or less painful years with PHP). He has a rock-solid background in (X)HTML, CSS and JavaScript and builds some quite fancy AJAXy things, too. He also speaks Java, and some VB and C#. And don't even get him started on usability, design patterns, code efficiency and test driven development ...</p>
-
-    <p>Clemens holds a diploma degree in information systems from Management Center Innsbruck which gives him a good background in commerce and economics. He plays the guitar and the piano, sings and enjoys good books. Contrary to what his friends might tell you, he also does sports ...</p>
+    <p>
+      Clemens has been developing web applications since 2001, switching to Rails some time in 2006 (after working some more or less painful years with PHP). He has a rock-solid background in (X)HTML, CSS and JavaScript and builds some quite fancy AJAXy things, too. He also speaks Java, and some VB and C#. And don't even get him started on usability, design patterns, code efficiency and test driven development ...
+    </p>
+    <p>
+      Clemens holds a diploma degree in information systems from Management Center Innsbruck which gives him a good background in commerce and economics. He plays the guitar and the piano, sings and enjoys good books. Contrary to what his friends might tell you, he also does sports ...
+    </p>
 
     <p>Read "his CV":/cv or contact him at <a href="mailto:clemens@railway.at">clemens@railway.at</a>.</p>
   </div>
