--- a/index.textile
+++ b/index.textile
@@ -11,7 +11,7 @@ title: Home
         <li><span>{{ post.date | date: "%d.%m.%Y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
       {% endfor %}
     </ul>
-    <p style="margin-top:1em;">You can read all posts in "our blog":/blog.</p>
+    <p style="margin-top:1em;">You can read all posts in "our blog":/blog or subscribe to the "Atom Feed":/articles.atom.</p>
   </div>
 </div>
 
