--- a/_posts/2010-05-15-facebook-trouble-and-what-we-can-do-about-it.textile
+++ b/_posts/2010-05-15-facebook-trouble-and-what-we-can-do-about-it.textile
@@ -36,3 +36,5 @@ As I've outlined, I fear that Facebook not only is here to stay but also that co
 I think, our duty as tech-savvy people is to inform and maybe educate our less tech-savvy friends and family about online privacy in general and Facebook's privacy issues in particular. We can tell them to take down all profile information that isn't absolutely necessary and not join stupid groups or fan pages anymore. We can inform them about alternatives – why not put pictures on "Flickr":http://flickr.com, travels on "Dopplr":http://dopplr.com or "TripIt":http://tripit.com etc.? We can take a look at emerging projects like Diaspora and OneSocialWeb, and in due time try convincing people to switch – even though there might not be FarmVille, MafiaWars or Which Vegetable Are You (I was broccoli, btw.).
 
 And we can hope for Mark Zuckerberg taking it a notch too far, resulting in either conviction (he'd certainly deserve it) or huge amounts of people leaving Facebook for good (he'd deserve that even more).
+
+*UPDATE*: Don't forget to uncheck the checkbox at http://www.facebook.com/settings/?tab=privacy&section=applications&field=instant_personalization so at least Facebook's partners don't get access to your information as soon as you just *visit* their website coming from Facebook.
