--- a/_posts/2010-07-18-trendwhoring.textile
+++ b/_posts/2010-07-18-trendwhoring.textile
@@ -11,4 +11,4 @@ _A good programmer is someone who embraces the advent of new technology as an *o
 
 "Trend whoring"::http://www.urbandictionary.com/define.php?term=trendwhore is never trendy – what is trendy is *critically evaluating new technology and using it where appropriate*.
 
-That is all. Now go back to whatever you where doing.
+That is all. Now go back to whatever you were doing.
