fix broken link

--- a/_posts/2010-07-18-trendwhoring.textile
+++ b/_posts/2010-07-18-trendwhoring.textile
@@ -9,6 +9,6 @@ This will be my shortest blog post ever because I basically only have one thing 
 
 _A good programmer is someone who embraces the advent of new technology as an *opportunity to learn* something new rather than to replace something existent just because the new thing is oh-so shiny and hip._
 
-"Trend whoring"::http://www.urbandictionary.com/define.php?term=trendwhore is never trendy – what is trendy is *critically evaluating new technology and using it where appropriate*.
+"Trend whoring":http://www.urbandictionary.com/define.php?term=trendwhore is never trendy – what is trendy is *critically evaluating new technology and using it where appropriate*.
 
 That is all. Now go back to whatever you were doing.
