--- a/cv.textile
+++ b/cv.textile
@@ -59,7 +59,7 @@ title: About
       <h3>Education</h3>
       <ol>
         <li>
-          <h4>University of Innsbruck, Austria "http://www.mci.edu":http://www.mci.edu</h4>
+          <h4>University of Innsbruck, Austria "http://uibk.ac.at":http://uibk.ac.at</h4>
           <p class="description">PhD in Management</p>
           <p class="date">since 2010</p>
         </li>
