--- a/cv.textile
+++ b/cv.textile
@@ -65,7 +65,7 @@ title: About
         </li>
         <li>
           <h4>Management Center Innsbruck (University of Applied Science), Austria "http://www.mci.edu":http://www.mci.edu</h4>
-          <p class="description">Magister (FH) diploma degree in Management &amp; Applied Informatics</p>
+          <p class="description">Magister (FH) diploma degree in Management &amp; Applied Informatics (Pass with Credit)</p>
           <p>Thesis: <i>User Experience of Websites with Heterogenous Target Groups</i></p>
           <p class="date">2004 - 2008</p>
         </li>
