--- a/about.textile
+++ b/about.textile
@@ -7,7 +7,7 @@ title: About
   <div class="content_wrapper">
     <h2>About</h2>
     <p>
-      <b>railway</b> is a web development company currently based in Berlin, Germany.
+      <b>railway</b> is a web development company currently based in Innsbruck, Austria.
       We offer all kinds of services including:
     </p>
     <ul class="bullets">
