--- a/portfolio.textile
+++ b/portfolio.textile
@@ -6,15 +6,40 @@ title: Portfolio
 <div class="content_box span-24">
   <div class="content_wrapper">
     <h2>Portfolio</h2>
-    <p>You can read about my "open source work":#open_source and some of my "client projects":#client_projects here.</p>
+    <p>You can read about some of my "client projects":#client_projects and my "open source work":#open_source here.</p>
     <p style="font-style:italic; font-size:0.8em;">Note: Projects of my PHP era aren't listed here! :-) Also, I can't list some projects due to confidentiality agreements.</p>
     <h3><a name="client_projects"></a>Client projects</h3>
     <ul id="client_projects">
       <li>
+        <a href="http://slash7.com"><img src="/images/portfolio/teaser/slash7.png" alt="" /></a>
+        <h4>Slash7</h4>
+        <p class="services">Services: development</p>
+        <p>
+          "Slash7":http://slash7.com are Amy Hoy and Thomas Fuchs, frontend gurus, entrepreneurs and developers of "Freckle time management":http://letsfreckle.com, among other things. I'm developing their soon-to-be-published customer support/help desk application "Charm Desk":http://charmde.sk for them.
+        </p>
+      </li>
+      <li>
+        <a href="http://www.avarteq.de"><img src="/images/portfolio/teaser/avarteq.png" alt="" /></a>
+        <h4>avarteq GmbH</h4>
+        <p class="services">Services: consulting, training/coaching</p>
+        <p>
+          "Avarteq":http://www.avarteq.de is a web agency and hosting company. I've coached and mentored their team of young developers, showing them tricks and development strategies in Ruby/Rails, automated testing, software architecture and project management.
+        </p>
+      </li>
+      <li>
+        <a href="http://betterplace.org"><img src="/images/portfolio/teaser/betterplace.png" alt="" /></a>
+        <h4>betterplace.org</h4>
+        <p class="services">Services: consulting</p>
+        <p>
+          "betterplace.org":http://betterplace.org is an online fundraising platform, guaranteeing that "100% of all donations are passed on to the respective projects":http://www.betterplace.org/about_us. I've done consulting for them, helping them to migrate their Ruby Gettext-based internationalization to "Rails' standard internationalization":http://github.com/svenfuchs/i18n.
+        </p>
+      </li>
+      <li>
         <a href="http://abiagenten.de"><img src="/images/portfolio/teaser/abiagenten.png" alt="" /></a>
         <h4>abiagenten.de</h4>
+        <p class="services">Services: development, consulting</p>
         <p>
-          "abiagenten.de":http://abiagenten.de is a community platform that helps German people manage their Abitur (high school graduation). I've written most of the administrative backend as well as the frontend calendar system and helped improve the testing strategy.
+          "abiagenten.de":http://abiagenten.de is a community platform that helps German people manage their Abitur (high school graduation). I've written some of the administrative backend as well as the frontend calendar system and helped improve the testing strategy.
         </p>
         <p>
           In a separate project, I helped create and revise several statistics and charts for a big market research campaign.
@@ -23,6 +48,7 @@ title: Portfolio
       <li>
         <a href="http://bezirk-mödling.at"><img src="/images/portfolio/teaser/bezirkmoedling.png" alt="" /></a>
         <h4>bezirk-mödling.at</h4>
+        <p class="services">Services: development</p>
         <p>
           "bezirk-mödling.at":http://bezirk-mödling.at is an event presentation platform for a district in Lower Austria. Among other things, it features an event calendar, heavily optimized search functions as well as powerful search engine optimization.
         </p>
@@ -30,13 +56,15 @@ title: Portfolio
       <li>
         <a href="http://bierher.at"><img src="/images/portfolio/teaser/bierher.png" alt="" /></a>
         <h4>bierher.at</h4>
+        <p class="services">Services: development, consulting</p>
         <p>
-          "bierher.at":http://bierher.at is a drinks and snack delivery service franchise, based in Vienna, Austria. I've rewritten their shop system from scratch and added a powerful administrative interface. Special features include real-time multiuser-capable distribution/logistics management powered by "Google Maps":http://maps.google.com, advanced inventory management, some highly specialized search functionalities and generally fancy AJAX stuff.
+          "bierher.at":http://bierher.at is a drinks and snack delivery service franchise, based in Vienna, Austria. I've helped optimize their workflows, rewritten their shop system from scratch and added a powerful administrative interface. Special features include real-time multiuser-capable distribution/logistics management powered by "Google Maps":http://maps.google.com, advanced inventory management, some highly specialized search functionalities and generally fancy AJAX stuff.
         </p>
       </li>
       <li>
         <a href="http://lesepartnerinnen.at"><img src="/images/portfolio/teaser/lesepartnerinnen2.png" alt="" /></a>
         <h4>lesepartnerinnen.at</h4>
+        <p class="services">Services: development</p>
         <p>
           "lesepartnerinnen.at":http://lesepartnerinnen.at is a project sponsored by the Austrian Ministry for Education for presenting schools' reading projects. I've developed the project presentation pages. What made this project special was that my work had to be integrated with an existing proprietary content management system.
         </p>
@@ -44,8 +72,9 @@ title: Portfolio
       <li>
         <a href="http://power4youth.eu"><img src="/images/portfolio/teaser/power4youth.png" alt="" /></a>
         <h4>power4youth.eu</h4>
+        <p class="services">Services: development, consulting</p>
         <p>
-          "power4youth.eu":http://power4youth.eu was intended as a community platform for out-of-home-childcare by "Quality4Children":http://quality4children.info, a sub-organization of "SOS Children's Villages":http://sos-childrensvillages.org. Sadly, the people responsible for the project left the company soon after the launch and the project has been in hibernation ever since.
+          "power4youth.eu":http://power4youth.eu was intended as a community platform for out-of-home-childcare by "Quality4Children":http://quality4children.info, a sub-organization of "SOS Children's Villages":http://sos-childrensvillages.org. I've helped with the conceptual design as well as developed the website. Sadly, the people responsible for the project left the company soon after the launch and the project has been in hibernation ever since.
         </p>
       </li>
     </ul>
@@ -69,7 +98,7 @@ title: Portfolio
     <ul class="bullets">
       <li>
         <h4>adva-cms</h4>
-        <p>"adva-cms":http://github.com/svenfuchs/adva_cms is a generic, engine-based Content Management System. It sports a module-based approach (thanks to Rails Engines) and baked-in internationalization support. You can find more information on http://adva-cms.org.</p>
+        <p>"adva-cms":http://github.com/svenfuchs/adva_cms is a generic, engine-based Content Management System. It sports a module-based approach (thanks to Rails Engines) and baked-in internationalization support. You can find more information on "the adva-cms website":http://adva-cms.org.</p>
       </li>
       <li>
         <h4>i18n / Rails i18n</h4>
