udpate about and cv

--- a/about.textile
+++ b/about.textile
@@ -27,10 +27,10 @@ title: About
     <img src="http://gravatar.com/avatar/5976001c9ebf095c4988855a4e102de5?s=200" alt="Clemens Kofler" style="float:left; margin:0 10px 20px 0;" />
     <h4>Clemens Kofler</h4>
     <p>
-      Clemens has been developing web applications since 2001, switching to Rails some time in 2006 (after working some more or less painful years with PHP). He has a rock-solid background in (X)HTML, CSS and JavaScript and builds some quite fancy AJAXy things, too. He also speaks Java, and some VB and C#. And don't even get him started on usability, design patterns, code efficiency and test driven development ...
+      Clemens has been developing web applications since 2001, switching to Rails some time in 2006 (after working some more or less painful years with PHP). He has a solid background in (X)HTML, CSS and JavaScript and builds some quite fancy AJAXy things, too. And don't even get him started on usability, design patterns, code efficiency and test driven development ...
     </p>
     <p>
-      Clemens holds a diploma degree in information systems from Management Center Innsbruck which gives him a good background in commerce and economics. He plays the guitar and the piano, sings and enjoys good books. Contrary to what his friends might tell you, he also does sports ...
+      Clemens holds a diploma degree in information systems from Management Center Innsbruck which gives him a good background in commerce and economics. He's also currently studying to get his PhD in Management at University of Innsbruck. He plays the guitar and the piano, sings and enjoys good books. Contrary to what his friends might tell you, he also occasionally does sports ...
     </p>
 
     <p>Read "his CV":/cv or contact him at <a href="mailto:clemens@railway.at">clemens@railway.at</a>.</p>
