--- a/portfolio.textile
+++ b/portfolio.textile
@@ -6,16 +6,32 @@ title: Portfolio
 <div class="content_box span-24">
   <div class="content_wrapper">
     <h2>Portfolio</h2>
-    <p>You can read about some of my "client projects":#client_projects and my "open source work":#open_source here.</p>
+    <p>You can read about some of my "client projects":#client_projects and my "open source work":#open_source here. Look "here":/praise to see what clients and other developers think about me and my work.</p>
     <p style="font-style:italic; font-size:0.8em;">Note: Projects of my PHP era aren't listed here! :-) Also, I can't list some projects due to confidentiality agreements.</p>
     <h3><a name="client_projects"></a>Client projects</h3>
     <ul id="client_projects">
+      <li>
+        <a href="http://redpeppix.com"><img src="/images/portfolio/teaser/redpeppix.png" alt="" /></a>
+        <h4>redpeppix.</h4>
+        <p class="services">Services: consulting, training/coaching, development</p>
+        <p>
+          "redpeppix.":http://redpeppix.com is a social commerce solution that allows users to create personalized product recommendations on images and be remunerated if people decide to follow their recommendation. I was brought in to help the project turn around and launch in time as well as to coach their development team in Ruby/Rails. Since then, I've helped with developing the platform, creating and connecting APIs and generally keeping the project in good shape.
+        </p>
+      </li>
       <li>
         <a href="http://slash7.com"><img src="/images/portfolio/teaser/slash7.png" alt="" /></a>
         <h4>Slash7</h4>
         <p class="services">Services: development</p>
         <p>
-          "Slash7":http://slash7.com are Amy Hoy and Thomas Fuchs, frontend gurus, entrepreneurs and developers of "Freckle time management":http://letsfreckle.com, among other things. I'm developing their soon-to-be-published customer support/help desk application "Charm Desk":http://charmde.sk for them.
+          "Slash7":http://slash7.com are Amy Hoy and Thomas Fuchs, frontend gurus, entrepreneurs and developers of "Freckle time management":http://letsfreckle.com, among other things. I've helped developing their soon-to-be-published customer support/help desk application "Charm Desk":http://charmde.sk.
+        </p>
+      </li>
+      <li>
+        <a href="http://www.reisewoche.at"><img src="/images/portfolio/teaser/reisewoche.png" alt="" /></a>
+        <h4>ReiseWoche</h4>
+        <p class="services">Services: development</p>
+        <p>
+          "ReiseWoche":http://www.reisewoche.at is an Austrian online holiday/event magazine. I've developed the application with a heavy focus on search engine optimization (SEO) and a content-inclusion API for 3rd party sites.
         </p>
       </li>
       <li>
@@ -39,10 +55,7 @@ title: Portfolio
         <h4>abiagenten.de</h4>
         <p class="services">Services: development, consulting</p>
         <p>
-          "abiagenten.de":http://abiagenten.de is a community platform that helps German people manage their Abitur (high school graduation). I've written some of the administrative backend as well as the frontend calendar system and helped improve the testing strategy.
-        </p>
-        <p>
-          In a separate project, I helped create and revise several statistics and charts for a big market research campaign.
+          "abiagenten.de":http://abiagenten.de is a community platform that helps German people manage their Abitur (high school graduation). I've written some of the administrative backend as well as the frontend calendar system and helped improve the testing strategy. In a separate project, I've helped creating and revising several statistics and charts for a big market research campaign.
         </p>
       </li>
       <li>
@@ -58,7 +71,7 @@ title: Portfolio
         <h4>bierher.at</h4>
         <p class="services">Services: development, consulting</p>
         <p>
-          "bierher.at":http://bierher.at is a drinks and snack delivery service franchise, based in Vienna, Austria. I've helped optimize their workflows, rewritten their shop system from scratch and added a powerful administrative interface. Special features include real-time multiuser-capable distribution/logistics management powered by "Google Maps":http://maps.google.com, advanced inventory management, some highly specialized search functionalities and generally fancy AJAX stuff.
+          "bierher.at":http://bierher.at is a drinks and snack delivery service franchise, based in Vienna, Austria. I've helped optimize their workflows, rewrote their shop system from scratch and added a powerful administrative interface. Special features include real-time multiuser distribution/logistics management powered by "Google Maps":http://maps.google.com, advanced inventory management, specialized search functionalities and generally (then) fancy AJAX stuff.
         </p>
       </li>
       <li>
@@ -94,7 +107,7 @@ title: Portfolio
         <p>"localized_dates":http://github.com/clemens/localized_dates is a plugin to support better date/time localization in Rails.</p>
       </li>
     </ul>
-    <p>I am also a core contributor and/or co-author to the following projects/plugins:</p>
+    <p>I am also a contributor and/or co-author to the following projects/plugins:</p>
     <ul class="bullets">
       <li>
         <h4>adva-cms</h4>
@@ -106,7 +119,7 @@ title: Portfolio
       </li>
       <li>
         <h4>Steam</h4>
-        <p>"Sven Fuchs":http://artweb-design.de and I wrote "Steam":http://github.com/svenfuchs/steam while working on a JavaScript-heavy application to support JavaScript-/AJAX-enabled full-stack integration testing.</p>
+        <p>"Sven Fuchs":http://svenfuchs.com and I wrote "Steam":http://github.com/svenfuchs/steam while working on a JavaScript-heavy application to support JavaScript-/AJAX-enabled full-stack integration testing.</p>
       </li>
       <li>
         <h4>Globalize2</h4>
@@ -114,7 +127,7 @@ title: Portfolio
       </li>
       <li>
         <h4>Role-Based Access Control (RBAC)</h4>
-        <p>When coming across the need for a better RBAC implementation for "adva-cms":http://adva-cms.org, "Sven Fuchs":http://artweb-design.de and I decided to write one from scratch. It's probably the most generic piece of code I've ever written: In < 500 lines of code we've implemented just about everything we might need for adva-cms - which is a pretty complex system, mind you, so it should do just fine for almost every use case.</p>
+        <p>When coming across the need for a better RBAC implementation for "adva-cms":http://adva-cms.org, "Sven Fuchs":http://svenfuchs.com and I decided to write one from scratch. It's probably the most generic piece of code I've ever written: In < 500 lines of code we've implemented just about everything we might need for adva-cms - which is a pretty complex system, mind you, so it should do just fine for almost every use case.</p>
       </li>
     </ul>
     <p>Finally, I've contributed "a number of patches":http://contributors.rubyonrails.org/contributors/clemens-kofler/commits for the "Ruby on Rails framework":http://rubyonrails.org.</p>
