--- a/services.textile
+++ b/services.textile
@@ -7,16 +7,23 @@ title: Services
   <div class="content_wrapper">
     <h2>Services</h2>
 
-    <p>We offer all kinds of services including (but not limited to):</p>
+    <div class="content">
+      <p>I offer all kinds of services including (but not limited to):</p>
 
-    <ul class="bullets">
-      <li>web design and programming</li>
-      <li>web/usability consulting</li>
-      <li>training</li>
-      <li>print design</li>
-      <li>corporate design/identity creation</li>
-    </ul>
+      <ul class="bullets">
+        <li>web programming</li>
+        <li>consulting (including training/coaching/mentoring; read more below)</li>
+      </ul>
 
-    <p>Contact us at <a href="mailto:office@railway.at">office@railway.at</a> for specific questions regarding our services and/or if you want to <a href="/hire_us">hire us</a>!</p>
+      <p>I consider myself a full-service provider: Although I'm not a designer there are lots of good designers in my professional network who you can hire through me (which might give you a little discount as well). You can then either deal with them directly or through me – or both.</p>
+
+      <p>Contact me at <a href="mailto:office@railway.at">office@railway.at</a> for specific questions regarding my services and/or if you want to <a href="/hire">hire me</a>!</p>
+
+      <h3>Rates</h3>
+
+      <p>
+        I'm a big fan of the open company philosophy and transparency in general – which is why I tell you pretty much <a href="/rates">everything you might want to know about my rates</a> right here online. No bullshit, no "oh, they're a big company so I can charge them more" mentality.
+      </p>
+    </div>
   </div>
 </div>
