--- a/praise.textile
+++ b/praise.textile
@@ -10,11 +10,15 @@ title: What Others Are Saying About Me
     <ul id="quotes">
       <li>
         <blockquote>i have to say, i love working with "@clemensk":http://twitter.com/clemensk.</blockquote>
-        <cite>"on Twitter":http://twitter.com/amyhoy/status/13850457150</cite>, Amy Hoy, web guru and owner of "Slash 7":http://slash7.com/company. I've been working on "Charm Desk":http://charmde.sk, their new customer support/help desk application, with Amy and Thomas.
+        <cite>"on Twitter":http://twitter.com/amyhoy/status/13850457150</cite>, Amy Hoy, web guru and owner of "Slash 7":http://slash7.com/company. I've been working on "Charm Desk":http://charmde.sk, their new customer support/help desk application, with Amy and her husband and partner-in-crime Thomas.
       </li>
       <li>
         <blockquote>One of the smartest Developers I've met!</blockquote>
         <cite>"WorkingWithRails recommendation":http://www.workingwithrails.com/recommendation/for/person/8252-clemens-kofler</cite>, Ingo Weiss, senior developer at "adva Business Software":http://adva-business.com. I've worked with Ingo for a couple of months at adva Business Software.
+      </li>
+      <li>
+        <blockquote>I had a great pair programming session with Clemens yesterday. [...] I was quite impressed by his ability to grasp the scope and details of the project after just a brief introduction. [...] Clemens was altogether very approachable and pleasant to work with. I would definitely like to keep contact in the future.</blockquote>
+        <cite>E-Mail recommendation, Andrea Singh, "Made by DNA":http://blog.madebydna.com. Andrea was the first person I've worked with in my "Code With Me project":/2011/04/23/code-with-me</cite>
       </li>
       <li>
         <blockquote>[...] quickly understood our administrative workflows and suggested solutions that brought about changes in our thinking but quickly proved to be right and useful [...]</blockquote>
